# double-ratchet

./: .gitignore  Example.hs  LICENSE  README.md  bob_private  bob_public  circle.yml  ratchet.cabal  ssk  stack.yaml
src/: Ratchet.hs
src/Ratchet/: Defaults.hs  Types.hs
test/: Main.hs
